# anki-tools

./: .pre-commit-config.yaml  README.md  add-pitch-accents.py  custom-scheduling.js  find-missing-examples.py  make-bold-examples.py  parse-pitch-accents.py  pyproject.toml  split-furigana.pl  update-cards.sh  validate.py
util/: furigana.py  mora.py
